# puzzles

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: connection.rs  lib.rs
entity/src/entities/: mod.rs  prelude.rs  word.rs
migration/src/: m20220101_000001_create_table.rs
seed/: Cargo.toml
spellingbee/: Cargo.toml
spellingbee/src/: letters.txt  main.rs
sudoku/src/: main.rs
sudoku/src/puzzles/easy/1/: input.txt  output.txt
sudoku/src/puzzles/easy/2/: input.txt  output.txt
sudoku/src/puzzles/medium/1/: input.txt
wordle/: Cargo.toml  README.md
wordle/src/: clues.txt  main.rs
