[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
sea-orm = { version = "1.0.0-rc.5", features = ["runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
entity = { path = "../entity" }
indicatif = "0.17.8"
